Remove Sensitive data

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 old.git
 old
 requirements_o.txt
+credential.json
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,django,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,django,python
