--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ old.git
 old
 requirements_o.txt
 credential.json
+private.txt
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,django,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,django,python
