Fix DRF API: Serializer could not get Models by pk after changing id from int to uuid

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ old
 requirements_o.txt
 docker-compose-prod.yml
 credential.json
+*.pdf
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudio,django,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,django,python
