Fix Dockerfile to be ready for fly.io deployment

--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for futsal-stat-track on 2023-11-02T14:30:37+01:00
+# fly.toml app configuration file generated for futsal-stat-trackk on 2023-11-04T17:08:48+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -6,6 +6,8 @@
 app = "futsal-stat-track"
 primary_region = "ams"
 console_command = "/code/manage.py shell"
+
+[build]
 
 [deploy]
   release_command = "python manage.py migrate"
