Add .idea folder to .dockerignore, separate Dockerfile for local dev and production, adjust entrypoint and change postgres version in docker-compose.yml, create Dockerfile.prod, minor changes in .sh scripts, add dump_restore_database.md file with instructions to manage database, point to dockerfile.prod and .dockerignore in fly.toml file

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,7 +7,7 @@
 *.sql.gz
 .cache
 .project
-.idea
+../.idea
 .pydevproject
 .idea/workspace.xml
 .DS_Store
@@ -26,4 +26,3 @@ src/node_modules
 web/media
 web/static/CACHE
 stats
-Dockerfile
