--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     container_name: web
     build: .
-    entrypoint: docker_files/routine.sh
+    entrypoint: /code/docker_files/routine.sh
     command: python /code/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
@@ -13,7 +13,7 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:13
+    image: postgres:15
     container_name: db
     environment:
       - "POSTGRES_USER=postgres"
