add .prod to Dockerfile in fly.toml, remove runserver command from docker-compose

--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@ primary_region = "ams"
 console_command = "/code/manage.py shell"
 
 [build]
-  dockerfile = "/code/docker_files/Dockerfile"
+  dockerfile = "/code/docker_files/Dockerfile.prod"
   ignorefile = "/code/docker_files/.dockerignore"
 
 [deploy]
